<resources>
    <string name="app_name">SMARTOWN</string>
    <string name="criarNota">Criar Nota</string>
    <string name="titulo">Título</string>
    <string name="subtitulo">Subtítulo</string>
    <string name="descricao">Descrição</string>
    <string name="empty_not_saved">Nota vazia</string>
    <string name="nomeUtilizador">Nome de utilizador</string>
    <string name="pass">Palavra-passe</string>
    <string name="login">Login</string>
    <string name="irNotas">Notas</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="inserirProblema">Inserir Problema</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="tipo">Tipo</string>
    <string name="acidente">1 - Acidente</string>
    <string name="obras">2 - Obras</string>
    <string name="transito">3 - Trânsito</string>
    <string name="estrada">4 - Estrada cortada</string>
    <string name="outros">5 - Outros</string>
    <string name="inserir">Inserir</string>
    <string name="logout">Logout</string>
</resources>